--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask==0.10.1
+Flask-Markdown==0.3
 Frozen-Flask==0.11
 Jinja2==2.7.1
+Markdown==2.3.1
 MarkupSafe==0.18
 Werkzeug==0.9.4
 argparse==1.2.1
